# reconcile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
docs/: Accounting_Invariants.md  Architecture.md  Event_Model.md  Reconcile_Project_State.md  Reconciliation_Design.md  Step_Plan.md
examples/demo_company/: bank_statement.csv  chart_of_accounts.csv  journal_entries.csv
examples/sample_output/: balance_sheet.csv  cash_flow.csv  income_statement.csv  trial_balance.csv
scripts/: __init__.py  rebuild_projections.py  run_reconcile.py
src/reconcile/: __init__.py  cli.py  db.py  exceptions.py  money.py
src/reconcile/accounts/: __init__.py  chart.py  models.py  service.py
src/reconcile/categorization/: __init__.py  classifier.py  (+2 more)
tests/: test_account_balances.py  test_account_service.py  test_accounts.py  test_bank_duplicate_detection.py  test_bank_import.py  test_cash_flow_report.py  test_cash_movements.py  test_categorization_classifier.py  test_categorization_corrections.py  test_categorization_rules.py  test_cli.py  test_db_schema.py  test_event_store.py  test_journal_models.py  test_journal_posting.py  test_journal_reversals.py  test_money.py  test_package_import.py  test_projection_rebuild.py  test_reconciliation_exact.py  test_reconciliation_fuzzy.py  test_reconciliation_splits.py  test_report_exports.py  test_reports.py  test_streamlit_dashboard.py
tests/property/: conftest.py  test_accounting_invariants.py  test_replay_invariants.py  test_reversal_invariants.py
(+29 files in other folders)
